--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seliga</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>seliga</h1>
+    <p>é um trabalho para a recuperação de notas para os alunos que precisam</p> 
 </body>
 </html>
